--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         build:
           context: ./
           dockerfile: ./Dockerfile
-        container_name: "mysymplestore"
+        container_name: "mysimplestore"
         ports:
           - 8080:8080
         volumes:
